# ChangeLog for media-plugins/gst-plugins-esd
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-esd/Attic/ChangeLog,v 1.36 2005/03/20 18:25:32 kloeri Exp $

  20 Mar 2005; Bryan Østergaard <kloeri@gentoo.org>
  gst-plugins-esd-0.8.7.ebuild:
  Stable on alpha.

  11 Mar 2005; Heinrich Wendel <lanius@gentoo.org>
  gst-plugins-esd-0.8.7.ebuild:
  stable on amd64

  09 Mar 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  gst-plugins-esd-0.8.7.ebuild:
  Stable on sparc

  09 Mar 2005; Mike Gardiner <obz@gentoo.org> gst-plugins-esd-0.8.7.ebuild:
  Keyworded ppc

*gst-plugins-esd-0.8.8 (08 Mar 2005)

  25 Jan 2005; Markus Rothe <corsair@gentoo.org> gst-plugins-esd-0.8.5.ebuild:
  Stable on ppc64

*gst-plugins-esd-0.8.7 (05 Jan 2005)

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  23 Dec 2004; Guy Martin <gmsoft@gentoo.org> gst-plugins-esd-0.8.5.ebuild:
  Stable on hppa.

  16 Dec 2004; Dylan Carlson <absinthe@gentoo.org>
  gst-plugins-esd-0.8.5.ebuild:
  Stable on amd64.

  15 Nov 2004; Bryan Østergaard <kloeri@gentoo.org>
  gst-plugins-esd-0.8.5.ebuild:
  Stable on alpha.

  12 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  gst-plugins-esd-0.8.5.ebuild:
  Stable on sparc

  11 Nov 2004; Mike Gardiner <obz@gentoo.org> gst-plugins-esd-0.8.5.ebuild:
  Keyworded ppc for GNOME 2.8

*gst-plugins-esd-0.8.5 (22 Oct 2004)

  01 Oct 2004; Stephen P. Becker <geoman@gentoo.org>
  gst-plugins-esd-0.8.2.ebuild:
  stable on mips

  27 Aug 2004; Tom Gall <tgall@gentoo.org> gst-plugins-esd-0.8.2.ebuild:
  stable on ppc64, bug #59368

  22 Aug 2004; Bryan Østergaard <kloeri@gentoo.org>
  gst-plugins-esd-0.8.2.ebuild:
  Stable on alpha.

*gst-plugins-esd-0.8.3 (18 Aug 2004)

  18 Aug 2004; foser <foser@gentoo.org> gst-plugins-esd-0.8.3.ebuild :
  New release

  05 Aug 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  gst-plugins-esd-0.8.2.ebuild: