@@ -1,10 +1,10 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-esd/Attic/gst-plugins-esd-0.8.7.ebuild,v 1.8 2005/03/20 18:25:32 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-esd/Attic/gst-plugins-esd-0.8.7.ebuild,v 1.9 2005/04/02 03:35:56 geoman Exp $
 
 inherit gst-plugins
 
-KEYWORDS="x86 alpha amd64 arm hppa ia64 ~mips ppc ~ppc64 sparc"
+KEYWORDS="x86 alpha amd64 arm hppa ia64 mips ppc ~ppc64 sparc"
 IUSE=""
 
 DEPEND=">=media-sound/esound-0.2.8"
