@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gst-plugins-esd
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-esd/Attic/ChangeLog,v 1.36 2005/03/20 18:25:32 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-esd/Attic/ChangeLog,v 1.37 2005/04/02 03:35:56 geoman Exp $
+
+  02 Apr 2005; Stephen P. Becker <geoman@gentoo.org>
+  gst-plugins-esd-0.8.7.ebuild:
+  stable on mips
 
   20 Mar 2005; Bryan Østergaard <kloeri@gentoo.org>
   gst-plugins-esd-0.8.7.ebuild:
